# Illumoz

./: .gitignore
.github/workflows/: dotnet.yaml
src_net/: .gitignore  Directory.Build.props  Mozc.slnx
src_net/Mozc.Base/: AtomicFile.cs  CharacterFormManager.cs  CharacterUtil.cs  CsvUtil.cs  GraphemeSplitter.cs  JapaneseRules.cs  JapaneseTextConverter.cs  JapaneseUtil.cs  LegacyFingerprint.cs  Mozc.Base.csproj  MozcConstants.cs  MozcLog.cs  MozcPaths.cs  NumberUtil.cs  ScriptType.cs  StringMapCodec.cs  SymbolDataParser.cs
src_net/Mozc.Base.Tests/: AtomicFileTests.cs  CharacterFormManagerTests.cs  CharacterUtilTests.cs  CsvUtilTests.cs  GraphemeSplitterTests.cs  JapaneseUtilTests.cs  LegacyFingerprintTests.cs  Mozc.Base.Tests.csproj  NumberUtilTests.cs  ScriptTypeTests.cs  StringMapCodecTests.cs
src_net/Mozc.Client/: ImeClient.cs  Mozc.Client.csproj
src_net/Mozc.Client.Tests/: ImeClientTests.cs  Mozc.Client.Tests.csproj
src_net/Mozc.Composer/: CharChunk.cs  CodepointTrie.cs  Composer.cs  Composition.cs  CompositionInput.cs  Mozc.Composer.csproj  NumberCharTransformer.cs  Table.cs  Transliterators.cs
src_net/Mozc.Composer.Tests/: ComposerConversionTests.cs  Mozc.Composer.Tests.csproj  NumberCharTransformerTests.cs  TableTests.cs  TransliteratorTests.cs
src_net/Mozc.Converter.Tests/: BoundaryDataGeneratorTests.cs  CandidateFilterTests.cs  ConnectionDataGeneratorTests.cs  ConnectorTests.cs  DataManagerTests.cs  DataSetBuilderTests.cs  EndToEndConversionTests.cs  (+13 more)
src_net/Mozc.Os.Linux/native/: CMakeLists.txt  ibus_mozc.c
tools/: transcode_japanese_rules.py
(+273 files in other folders)
